# halo_radar

./: CMakeLists.txt  README.md  package.xml  setup.py
nodes/: halo_radar_node.py
scripts/: multicast_listen.py  ping_halo.py
src/halo_radar/: angular_speed_estimator.h  fix_angle_increments.cpp  fix_scan_times.cpp  halo_radar.cpp  halo_radar.h  halo_radar.py  halo_radar_node.cpp  halo_radar_structures.h
