<?xml version="1.0"?>
<package format="2">
  <name>halo_radar</name>
  <version>0.0.0</version>
  <description>The halo_radar package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>GPL</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>marine_msgs</depend>
  <depend>rospy</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

